:sparkles: adding two ball effect : wall teleport & clear

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	background: grey;
 }
 
 #canvasContainer {
@@ -8,4 +9,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	canvas {
+		border: solid black 2px;
+	}
 }
