--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0; }
+  margin: 0;
+  background: grey; }
 
 #canvasContainer {
   width: 100vw;
@@ -7,3 +8,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; }
+  #canvasContainer canvas {
+    border: solid black 2px; }
