:sparkles: adding ready button and launcher

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -13,3 +13,12 @@ body {
 		border: solid black 2px;
 	}
 }
+
+.playerInfoContainer {
+	display: flex;
+	flex-direction: column;
+}
+
+.gameState {
+	margin-top: 20px;
+}
