--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,3 +10,10 @@ body {
   align-items: center; }
   #canvasContainer canvas {
     border: solid black 2px; }
+
+.playerInfoContainer {
+  display: flex;
+  flex-direction: column; }
+
+.gameState {
+  margin-top: 20px; }
